// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Explorer > renders DataView in grid layout mode 1`] = `
<div>
  <div
    class="blong-explorer "
    style="display: flex; flex-direction: column; height: 100%;"
  >
    <style>
      .blong-explorer-current-row { outline: 0.15rem solid var(--primary-color) !important; outline-offset: -0.15rem; }
    </style>
    <div
      class="p-toolbar p-component blong-explorer-toolbar border-none p-2 flex-nowrap"
      role="toolbar"
      style="background: none;"
    >
      <div
        class="p-toolbar-group-left"
      >
        <div
          class="blong-toolbar-left"
        />
      </div>
      <div
        class="p-toolbar-group-right"
      >
        <div
          class="blong-toolbar-right"
        >
          <button
            class="p-button p-component p-button-text mr-2 p-button-icon-only"
          >
            <span
              class="p-button-icon p-c pi pi-search"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
          <span
            class="p-input-icon-left mr-2"
            style="position: relative; display: inline-flex; align-items: center; flex-shrink: 0;"
          >
            <i
              class="pi pi-search"
              style="position: absolute; left: 0.5rem; pointer-events: none;"
            />
            <input
              class="p-inputtext p-component blong-explorer-search"
              placeholder="Search…"
              style="width: 10rem; padding-left: 1.75rem;"
              value=""
            />
          </span>
          <button
            class="p-button p-component p-button-text mr-2 p-button-icon-only"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-cog"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; min-height: 0;"
    >
      <div
        class="blong-explorer-table"
        style="display: flex; flex-direction: column; height: 100%;"
      >
        <div
          class="p-dataview p-component p-dataview-grid blong-explorer-dv"
          style="flex: 1 1 0%; overflow: auto;"
        >
          <div
            class="p-dataview-content"
          >
            <div
              class="p-grid grid p-nogutter grid-nogutter"
            >
              <div
                class="p-col-12 col-12 p-dataview-emptymessage"
              >
                No records found.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Explorer > renders empty state with no listAction 1`] = `
<div>
  <div
    class="blong-explorer "
    style="display: flex; flex-direction: column; height: 100%;"
  >
    <style>
      .blong-explorer-current-row { outline: 0.15rem solid var(--primary-color) !important; outline-offset: -0.15rem; }
    </style>
    <div
      class="p-toolbar p-component blong-explorer-toolbar border-none p-2 flex-nowrap"
      role="toolbar"
      style="background: none;"
    >
      <div
        class="p-toolbar-group-left"
      >
        <div
          class="blong-toolbar-left"
        />
      </div>
      <div
        class="p-toolbar-group-right"
      >
        <div
          class="blong-toolbar-right"
        >
          <button
            class="p-button p-component p-button-text mr-2 ml-2 p-button-icon-only"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-arrows-h"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
          <button
            class="p-button p-component p-button-text mr-2 p-button-icon-only"
          >
            <span
              class="p-button-icon p-c pi pi-search"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
          <span
            class="p-input-icon-left mr-2"
            style="position: relative; display: inline-flex; align-items: center; flex-shrink: 0;"
          >
            <i
              class="pi pi-search"
              style="position: absolute; left: 0.5rem; pointer-events: none;"
            />
            <input
              class="p-inputtext p-component blong-explorer-search"
              placeholder="Search…"
              style="width: 10rem; padding-left: 1.75rem;"
              value=""
            />
          </span>
          <button
            class="p-button p-component p-button-text mr-2 p-button-icon-only"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-cog"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; min-height: 0;"
    >
      <div
        class="blong-explorer-table"
        style="display: flex; flex-direction: column; height: 100%;"
      >
        <div
          class="p-datatable p-component p-datatable-selectable p-datatable-sm blong-explorer-dt"
          data-scrollselectors=".p-datatable-wrapper"
          pr_id_1=""
          style="flex: 1 1 0%; min-height: 0;"
        >
          <div
            class="p-datatable-wrapper"
          >
            <table
              class="p-datatable-table"
              role="table"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr
                  role="row"
                >
                  <th
                    class="p-selection-column"
                    role="columnheader"
                    style="width: 40px;"
                  >
                    <div
                      class="p-column-header-content"
                    >
                      <span
                        class="p-column-title"
                      />
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                    >
                      <span
                        class="p-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="p-sortable-column-icon pi pi-fw pi-sort-alt"
                      />
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                    >
                      <span
                        class="p-column-title"
                      >
                        Size
                      </span>
                      <span
                        class="p-sortable-column-icon pi pi-fw pi-sort-alt"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                  role="row"
                >
                  <td
                    colspan="3"
                    role="cell"
                  >
                    No records found.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Explorer > renders toolbar 1`] = `
<div>
  <div
    class="blong-explorer "
    style="display: flex; flex-direction: column; height: 100%;"
  >
    <style>
      .blong-explorer-current-row { outline: 0.15rem solid var(--primary-color) !important; outline-offset: -0.15rem; }
    </style>
    <div
      class="p-toolbar p-component blong-explorer-toolbar border-none p-2 flex-nowrap"
      role="toolbar"
      style="background: none;"
    >
      <div
        class="p-toolbar-group-left"
      >
        <div
          class="blong-toolbar-left"
        >
          <span
            style="display: inline-block;"
          >
            <button
              aria-label="Add"
              class="p-button p-component blong-action-btn mr-2"
            >
              <span
                class="p-button-icon p-c p-button-icon-left pi-plus"
              />
              <span
                class="p-button-label p-c"
              >
                <span>
                  Add
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <div
        class="p-toolbar-group-right"
      >
        <div
          class="blong-toolbar-right"
        >
          <button
            class="p-button p-component p-button-text mr-2 ml-2 p-button-icon-only"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-arrows-h"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
          <button
            class="p-button p-component p-button-text mr-2 p-button-icon-only"
          >
            <span
              class="p-button-icon p-c pi pi-search"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
          <span
            class="p-input-icon-left mr-2"
            style="position: relative; display: inline-flex; align-items: center; flex-shrink: 0;"
          >
            <i
              class="pi pi-search"
              style="position: absolute; left: 0.5rem; pointer-events: none;"
            />
            <input
              class="p-inputtext p-component blong-explorer-search"
              placeholder="Search…"
              style="width: 10rem; padding-left: 1.75rem;"
              value=""
            />
          </span>
          <button
            class="p-button p-component p-button-text mr-2 p-button-icon-only"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-cog"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; min-height: 0;"
    >
      <div
        class="blong-explorer-table"
        style="display: flex; flex-direction: column; height: 100%;"
      >
        <div
          class="p-datatable p-component p-datatable-selectable p-datatable-sm blong-explorer-dt"
          data-scrollselectors=".p-datatable-wrapper"
          pr_id_2=""
          style="flex: 1 1 0%; min-height: 0;"
        >
          <div
            class="p-datatable-wrapper"
          >
            <table
              class="p-datatable-table"
              role="table"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr
                  role="row"
                >
                  <th
                    class="p-selection-column"
                    role="columnheader"
                    style="width: 40px;"
                  >
                    <div
                      class="p-column-header-content"
                    >
                      <span
                        class="p-column-title"
                      />
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                    >
                      <span
                        class="p-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="p-sortable-column-icon pi pi-fw pi-sort-alt"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                  role="row"
                >
                  <td
                    colspan="2"
                    role="cell"
                  >
                    No records found.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Explorer > renders with data rows after dispatch resolves 1`] = `
<div>
  <div
    class="blong-explorer "
    style="display: flex; flex-direction: column; height: 100%;"
  >
    <style>
      .blong-explorer-current-row { outline: 0.15rem solid var(--primary-color) !important; outline-offset: -0.15rem; }
    </style>
    <div
      class="p-toolbar p-component blong-explorer-toolbar border-none p-2 flex-nowrap"
      role="toolbar"
      style="background: none;"
    >
      <div
        class="p-toolbar-group-left"
      >
        <div
          class="blong-toolbar-left"
        />
      </div>
      <div
        class="p-toolbar-group-right"
      >
        <div
          class="blong-toolbar-right"
        >
          <button
            class="p-button p-component p-button-text mr-2 ml-2 p-button-icon-only"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-arrows-h"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
          <button
            class="p-button p-component p-button-text mr-2 p-button-icon-only"
          >
            <span
              class="p-button-icon p-c pi pi-search"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
          <span
            class="p-input-icon-left mr-2"
            style="position: relative; display: inline-flex; align-items: center; flex-shrink: 0;"
          >
            <i
              class="pi pi-search"
              style="position: absolute; left: 0.5rem; pointer-events: none;"
            />
            <input
              class="p-inputtext p-component blong-explorer-search"
              placeholder="Search…"
              style="width: 10rem; padding-left: 1.75rem;"
              value=""
            />
          </span>
          <button
            class="p-button p-component p-button-text mr-2 p-button-icon-only"
            style="opacity: 0.5;"
          >
            <span
              class="p-button-icon p-c pi pi-cog"
            />
            <span
              class="p-button-label p-c"
            >
               
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      style="flex: 1 1 0%; min-height: 0;"
    >
      <div
        class="blong-explorer-table"
        style="display: flex; flex-direction: column; height: 100%;"
      >
        <div
          class="p-datatable p-component p-datatable-selectable p-datatable-sm blong-explorer-dt"
          data-scrollselectors=".p-datatable-wrapper"
          pr_id_3=""
          style="flex: 1 1 0%; min-height: 0;"
        >
          <div
            class="p-datatable-wrapper"
          >
            <table
              class="p-datatable-table"
              role="table"
            >
              <thead
                class="p-datatable-thead"
              >
                <tr
                  role="row"
                >
                  <th
                    class="p-selection-column"
                    role="columnheader"
                    style="width: 40px;"
                  >
                    <div
                      class="p-column-header-content"
                    >
                      <span
                        class="p-column-title"
                      />
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                    >
                      <span
                        class="p-column-title"
                      >
                        Name
                      </span>
                      <span
                        class="p-sortable-column-icon pi pi-fw pi-sort-alt"
                      />
                    </div>
                  </th>
                  <th
                    aria-sort="none"
                    class="p-sortable-column"
                    role="columnheader"
                    tabindex="0"
                  >
                    <div
                      class="p-column-header-content"
                    >
                      <span
                        class="p-column-title"
                      >
                        Size
                      </span>
                      <span
                        class="p-sortable-column-icon pi pi-fw pi-sort-alt"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class="p-datatable-tbody"
              >
                <tr
                  class="p-datatable-emptymessage"
                  role="row"
                >
                  <td
                    colspan="3"
                    role="cell"
                  >
                    No records found.
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
